--- a/index.html
+++ b/index.html
@@ -33,7 +33,186 @@
             </div>
         </section>
         <!-- sponsers -->
-        
+        <section id="container">
+            <div class="sponser-img">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </section>
+        <!-- Popular Collection -->
+        <section id="container">
+            <h2 class="popular-title">Popular Collection</h2>
+            <div class="popular-collection">
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <article class="single-box">
+                    <div class="popular-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="box-description">
+                        <h3 class="box-title">Flex Tripod</h3>
+                        <h4 class="box-count">$50.48</h4>
+                        <div class="box-icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <p>4.99</p>
+                        </div>
+                        <div class="articles">Wordwide shifting available Buyers protection possible!</div>
+                    </div>
+                </article>
+                <i class="fa-solid fa-arrow-right-long"></i>
+            </div>
+        </section>
     </main>
     <!-- footers sections  -->
     <footer>
