--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 </head>
 <body>
     <!-- headers -->
-
+    <header>
+        <nav>
+            <a href="#"><div class="logo">Influencer</div></a>
+            <div class="nav-items">
+               <li> <a href="#">Home</a></li>
+               <li> <a href="#">product</a></li>
+               <li> <a href="#">sing up</a></li>
+               <li> <a href="#">loge in</a></li>
+               <div class="top-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+               <i class="fa-solid fa-cart-arrow-down"></i>
+               </div>
+            </div>
+        </nav>
+    </header>
     <!-- mains sections -->
     <main>
         <!-- banner sections -->
@@ -213,10 +227,34 @@
                 <i class="fa-solid fa-arrow-right-long"></i>
             </div>
         </section>
+        <section id="container">
+           <div class="top-futuer">
+            <div class="futuer-img">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="futuer">
+                <h2 class="futuer-title">Featured products at one place</h2>
+                <p class="futuer-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+               <div class="btn-flex futuer-btn">
+                <a href="#" class="btn">Join Now <i class="fa-solid fa-arrow-right-long"></i></a>
+               </div>
+            </div>
+           </div>
+        </section>
     </main>
     <!-- footers sections  -->
     <footer>
-
+        <div class="footer-part">
+            <h2 class="footer-title">Influencer products</h2>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <div class="social-icon">
+                <i class="fa-brands fa-twitter fluid"></i>
+                <i class="fa-brands fa-google-plus-g fluid"></i>
+                <i class="fa-brands fa-facebook-f fluid"></i>
+                <i class="fa-brands fa-github fluid"></i>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
